Nomes snake case refatorados para camel case
