# Arquivos/Swagger doc.yaml
@@ -29,7 +29,7 @@ paths:
                 nome: Bernardo Kauê da Silva
                 login: berna123
                 cpf: '59105639042'
-                data_nasc: 16/01/1975
+                dataNasc: 16/01/1975
                 sexo: M
                 telefone: (45)12345-1234
                 email: bernardo-dasilva98@hotmail.co.jp
@@ -37,7 +37,7 @@ paths:
                 uf: PR
                 cidade: Curitiba
                 rua: Jardinete Rutílio de Sá Ribas
-                numero_rua: 252
+                numeroRua: 252
         '401':
           description: Não autorizado
       security:
@@ -57,12 +57,12 @@ paths:
               login: heloi123
               senha: asd123aaD
               cpf: '70181125404'
-              data_nasc: 06/03/1945
+              dataNasc: 06/03/1945
               sexo: F
               telefone: (85)98981-2256
               email: heloisa_costa@ciaimoveissjc.com
               cep: 61604-270
-              numero_rua: '981'
+              numeroRua: '981'
         required: true
       responses:
         '200':
@@ -74,12 +74,12 @@ paths:
                 login: heloi123
                 senha: asd123aaD
                 cpf: '70181125404'
-                data_nasc: 06/03/1945
+                dataNasc: 06/03/1945
                 sexo: F
                 telefone: (85)98981-2256
                 email: heloisa_costa@ciaimoveissjc.com
                 cep: 61604-270
-                numero_rua: '981'
+                numeroRua: '981'
         '400':
           description: Parametros inválidos ou já cadastrados
           content:
@@ -95,7 +95,7 @@ paths:
                   Erros: Siga o padrão 12345-678. Não deve estar vazio. CEP não existe.
                 - Campo: login
                   Erros: Deve conter apenas números ou '_', e pelo menos uma letra minúscula. Não deve estar em branco. Login deve ter entre 8 e 20 caracteres.
-                - Campo: numero_rua
+                - Campo: numeroRua
                   Erros: Deve ser qualquer número entre 1 e 99999. Não deve estar em branco.
                 - Campo: cpf
                   Erros: Não deve estar em branco. Número do registro de contribuinte individual brasileiro (CPF) inválido.
@@ -103,7 +103,7 @@ paths:
                   Erros: Não deve estar em branco.
                 - Campo: senha
                   Erros: Senha deve ter entre 8 e 20 caracteres. Não deve estar em branco. Deve conter ao menos uma letra maiúscula, uma minúscula e um número.
-                - Campo: data_nasc
+                - Campo: dataNasc
                   Erros: 'Não deve estar em branco. Deve estar no formato: ''dd/MM/yyyy''. Data inválida.'
         '401':
           description: Não autorizado
@@ -124,12 +124,12 @@ paths:
               login: heloi123
               senha: asd123aaD
               cpf: '70181125404'
-              data_nasc: 06/03/1945
+              dataNasc: 06/03/1945
               sexo: F
               telefone: (85)98981-2256
               email: heloisa_costa@ciaimoveissjc.com
               cep: 61604-270
-              numero_rua: '981'
+              numeroRua: '981'
         required: true
       responses:
         '201':
@@ -140,7 +140,7 @@ paths:
                 nome: Heloisa Yasmin Costa
                 login: heloi123
                 cpf: '70181125404'
-                data_nasc: 06/03/1945
+                dataNasc: 06/03/1945
                 sexo: F
                 telefone: (85)98981-2256
                 email: heloisa_costa@ciaimoveissjc.com
@@ -148,7 +148,7 @@ paths:
                 uf: CE
                 cidade: Caucaia
                 rua: Rua Sargento Feitosa
-                numero_rua: 981
+                numeroRua: 981
         '400':
           description: Parametros inválidos ou já cadastrados
           content:
@@ -164,7 +164,7 @@ paths:
                   Erros: Siga o padrão 12345-678. Não deve estar vazio. CEP não existe.
                 - Campo: login
                   Erros: Deve conter apenas números ou '_', e pelo menos uma letra minúscula. Não deve estar em branco. Login deve ter entre 8 e 20 caracteres.
-                - Campo: numero_rua
+                - Campo: numeroRua
                   Erros: Deve ser qualquer número entre 1 e 99999. Não deve estar em branco.
                 - Campo: cpf
                   Erros: Não deve estar em branco. Número do registro de contribuinte individual brasileiro (CPF) inválido.
@@ -172,7 +172,7 @@ paths:
                   Erros: Não deve estar em branco.
                 - Campo: senha
                   Erros: Senha deve ter entre 8 e 20 caracteres. Não deve estar em branco. Deve conter ao menos uma letra maiúscula, uma minúscula e um número.
-                - Campo: data_nasc
+                - Campo: dataNasc
                   Erros: 'Não deve estar em branco. Deve estar no formato: ''dd/MM/yyyy''. Data inválida.'
       security: []
     delete:
@@ -210,7 +210,7 @@ paths:
               $ref: '#/components/schemas/ProdutoDTO'
             example:
               nome: Blusa C
-              quantidade_estoque: '36'
+              quantidadeEstoque: '36'
               preco: 87,50
         required: true
       responses:
@@ -221,7 +221,7 @@ paths:
               example:
                 id: 9da57f64-dc4b-4d6d-b39b-426ffea66e3b
                 nome: Blusa C
-                quantidade_estoque: 36
+                quantidadeEstoque: 36
                 preco: 87.5
         '400':
           description: Parametros inválidos ou já cadastrados
@@ -230,7 +230,7 @@ paths:
               example:
                 - Campo: preco
                   Erros: Não deve estar em branco. Deve ser qualquer valor monetário até 9999,99 com dois dígitos após , ou .
-                - Campo: quantidade_estoque
+                - Campo: quantidadeEstoque
                   Erros: Não deve estar em branco. Deve ser qualquer número entre 0 e 999999.
                 - Campo: nome
                   Erros: 'Pode conter qualquer letra, número e os seguintes caracteres: , . /  # ( ) -. Não deve estar em branco.'
@@ -285,7 +285,7 @@ paths:
                 - produto:
                     id: f9c473bf-afb8-4eb2-9d32-d1c2b9498408
                     nome: Blusa B
-                    quantidade_estoque: 326
+                    quantidadeEstoque: 326
                     preco: 87.5
                     links:
                       - rel: self
@@ -295,7 +295,7 @@ paths:
                 - produto:
                     id: b7545abe-eec2-4537-88fc-63667782789c
                     nome: Meia B
-                    quantidade_estoque: 56
+                    quantidadeEstoque: 56
                     preco: 6.44
                     links:
                       - rel: self
@@ -305,7 +305,7 @@ paths:
                 - produto:
                     id: 8fcfe445-864c-4d96-b8c0-7d75acb45dc5
                     nome: Tênis B
-                    quantidade_estoque: 91
+                    quantidadeEstoque: 91
                     preco: 6.44
                     links:
                       - rel: self
@@ -353,7 +353,7 @@ paths:
                 - produto:
                     id: 8fcfe445-864c-4d96-b8c0-7d75acb45dc5
                     nome: Tênis B
-                    quantidade_estoque: 87
+                    quantidadeEstoque: 87
                     preco: 6.44
                     links:
                       - rel: self
@@ -364,7 +364,7 @@ paths:
                   Quantidade de produtos: 1
                   Valor total do carrinho: 19.32
         '400':
-          description: Id inválida
+          description: Id inválida.
         '401':
           description: Não autorizado
         '403':
@@ -436,35 +436,35 @@ paths:
                 content:
                   - id: b47861f2-5ae0-4771-9d52-8d45bfec6acb
                     nome: Bermuda A
-                    quantidade_estoque: 410
+                    quantidadeEstoque: 410
                     preco: 900
                     links:
                       - rel: self
                         href: http://localhost:8080/produtos/id/b47861f2-5ae0-4771-9d52-8d45bfec6acb
                   - id: 6bb93022-563a-4e01-ac6f-9752559447b7
                     nome: Bermuda B
-                    quantidade_estoque: 84
+                    quantidadeEstoque: 84
                     preco: 6.44
                     links:
                       - rel: self
                         href: http://localhost:8080/produtos/id/6bb93022-563a-4e01-ac6f-9752559447b7
                   - id: 02e177c8-1d32-4ffb-984f-63e3e8a4e966
                     nome: Blusa A
-                    quantidade_estoque: 495
+                    quantidadeEstoque: 495
                     preco: 10
                     links:
                       - rel: self
                         href: http://localhost:8080/produtos/id/02e177c8-1d32-4ffb-984f-63e3e8a4e966
                   - id: f9c473bf-afb8-4eb2-9d32-d1c2b9498408
                     nome: Blusa B
-                    quantidade_estoque: 500
+                    quantidadeEstoque: 500
                     preco: 10
                     links:
                       - rel: self
                         href: http://localhost:8080/produtos/id/f9c473bf-afb8-4eb2-9d32-d1c2b9498408
                   - id: 9da57f64-dc4b-4d6d-b39b-426ffea66e3b
                     nome: Blusa C
-                    quantidade_estoque: 36
+                    quantidadeEstoque: 36
                     preco: 87.5
                     links:
                       - rel: self
@@ -503,7 +503,7 @@ paths:
               $ref: '#/components/schemas/ProdutoDTO'
             example:
               nome: Blusa C
-              quantidade_estoque: '76'
+              quantidadeEstoque: '76'
               preco: 38,99
         required: true
       responses:
@@ -514,7 +514,7 @@ paths:
               example:
                 id: 9da57f64-dc4b-4d6d-b39b-426ffea66e3b
                 nome: Blusa C
-                quantidade_estoque: 76
+                quantidadeEstoque: 76
                 preco: 38.99
         '400':
           description: Parametros inválidos ou já cadastrados
@@ -523,7 +523,7 @@ paths:
               example:
                 - Campo: preco
                   Erros: Não deve estar em branco. Deve ser qualquer valor monetário até 9999,99 com dois dígitos após , ou .
-                - Campo: quantidade_estoque
+                - Campo: quantidadeEstoque
                   Erros: Não deve estar em branco. Deve ser qualquer número entre 0 e 999999.
                 - Campo: nome
                   Erros: 'Pode conter qualquer letra, número e os seguintes caracteres: , . /  # ( ) -. Não deve estar em branco.'
@@ -608,8 +608,8 @@ paths:
                     login: andrea123
                     senha: $2a$10$1nsF8HaOjqB7lh3fgTA0wOow62WMWJsl6k5sZYMshihTDVFM/zuoq
                     cpf: '20259721808'
-                    data_nasc: 22/02/1970
-                    data_cadastro: 15/07/2023 às 18:34:59 UTC
+                    dataNasc: 22/02/1970
+                    dataCadastro: 15/07/2023 às 18:34:59 UTC
                     sexo: F
                     telefone: (67)99156-1981
                     email: andrea_simone_cardoso@hp.com
@@ -617,7 +617,7 @@ paths:
                     uf: MS
                     cidade: Três Lagoas
                     rua: Rua João de Almeida Barros
-                    numero_rua: 2884
+                    numeroRua: 2884
                     enabled: true
                     password: $2a$10$1nsF8HaOjqB7lh3fgTA0wOow62WMWJsl6k5sZYMshihTDVFM/zuoq
                     authorities:
@@ -636,8 +636,8 @@ paths:
                     login: artur123
                     senha: $2a$10$0kAMvnI4u0rilAO2brHI1eULAll.lBVCXu1J2fTgTSI19GutNT1bW
                     cpf: '68497813081'
-                    data_nasc: 26/02/2002
-                    data_cadastro: 24/05/2023 às 12:50:05 UTC
+                    dataNasc: 26/02/2002
+                    dataCadastro: 24/05/2023 às 12:50:05 UTC
                     sexo: F
                     telefone: (45)12345-1234
                     email: artur@pibnet.com.br
@@ -645,7 +645,7 @@ paths:
                     uf: CE
                     cidade: Juazeiro do Norte
                     rua: Rua São Pedro
-                    numero_rua: 22
+                    numeroRua: 22
                     enabled: true
                     password: $2a$10$0kAMvnI4u0rilAO2brHI1eULAll.lBVCXu1J2fTgTSI19GutNT1bW
                     authorities:
@@ -664,8 +664,8 @@ paths:
                     login: aurora123
                     senha: $2a$10$R6YIwkfUj2HUO0a.kbaJXurLI8eoCHRy7c7OWoeR3HWqyQfriLLiC
                     cpf: '87773610240'
-                    data_nasc: 13/06/1963
-                    data_cadastro: 15/07/2023 às 18:25:54 UTC
+                    dataNasc: 13/06/1963
+                    dataCadastro: 15/07/2023 às 18:25:54 UTC
                     sexo: F
                     telefone: (21)98620-6951
                     email: aurora_depaula@gustavoscoelho.com.br
@@ -673,7 +673,7 @@ paths:
                     uf: RJ
                     cidade: Rio de Janeiro
                     rua: Rua Sândalo
-                    numero_rua: 981
+                    numeroRua: 981
                     enabled: true
                     password: $2a$10$R6YIwkfUj2HUO0a.kbaJXurLI8eoCHRy7c7OWoeR3HWqyQfriLLiC
                     authorities:
@@ -692,8 +692,8 @@ paths:
                     login: bened123
                     senha: $2a$10$K3UzNbc7TAdIiozqlOJHZe9leli3wefvke88JoFNvK/FSwNthDcAW
                     cpf: '98153379470'
-                    data_nasc: 30/11/2034
-                    data_cadastro: 09/07/2023 às 14:16:17 UTC
+                    dataNasc: 30/11/2034
+                    dataCadastro: 09/07/2023 às 14:16:17 UTC
                     sexo: M
                     telefone: (69)98856-5123
                     email: benedito.juan.sales@gerj.com.br
@@ -701,7 +701,7 @@ paths:
                     uf: PR
                     cidade: Curitiba
                     rua: Jardinete Rutílio de Sá Ribas
-                    numero_rua: 22
+                    numeroRua: 22
                     enabled: true
                     password: $2a$10$K3UzNbc7TAdIiozqlOJHZe9leli3wefvke88JoFNvK/FSwNthDcAW
                     authorities:
@@ -720,8 +720,8 @@ paths:
                     login: berna123
                     senha: $2a$10$0kAMvnI4u0rilAO2brHI1eULAll.lBVCXu1J2fTgTSI19GutNT1bW
                     cpf: '59105639042'
-                    data_nasc: 16/01/1975
-                    data_cadastro: 24/05/2023 às 12:51:44 UTC
+                    dataNasc: 16/01/1975
+                    dataCadastro: 24/05/2023 às 12:51:44 UTC
                     sexo: M
                     telefone: (45)12345-1234
                     email: bernardo-dasilva98@hotmail.co.jp
@@ -729,7 +729,7 @@ paths:
                     uf: PR
                     cidade: Curitiba
                     rua: Jardinete Rutílio de Sá Ribas
-                    numero_rua: 252
+                    numeroRua: 252
                     enabled: true
                     password: $2a$10$0kAMvnI4u0rilAO2brHI1eULAll.lBVCXu1J2fTgTSI19GutNT1bW
                     authorities:
@@ -827,8 +827,8 @@ paths:
                     login: artur123
                     senha: $2a$10$0kAMvnI4u0rilAO2brHI1eULAll.lBVCXu1J2fTgTSI19GutNT1bW
                     cpf: '68497813081'
-                    data_nasc: 26/02/2002
-                    data_cadastro: 24/05/2023 às 12:50:05 UTC
+                    dataNasc: 26/02/2002
+                    dataCadastro: 24/05/2023 às 12:50:05 UTC
                     sexo: F
                     telefone: (45)12345-1234
                     email: artur@pibnet.com.br
@@ -836,7 +836,7 @@ paths:
                     uf: CE
                     cidade: Juazeiro do Norte
                     rua: Rua São Pedro
-                    numero_rua: 22
+                    numeroRua: 22
                     enabled: true
                     password: $2a$10$0kAMvnI4u0rilAO2brHI1eULAll.lBVCXu1J2fTgTSI19GutNT1bW
                     accountNonExpired: true
@@ -905,8 +905,8 @@ paths:
                     login: heloi123
                     senha: $2a$10$HhxGI2Ic8SkNNRU3vsq9m.3kJjzxRtik.uePu3WSjm3PxZeyS5VFC
                     cpf: '70181125404'
-                    data_nasc: 06/03/1945
-                    data_cadastro: 24/07/2023 às 16:58:49 UTC
+                    dataNasc: 06/03/1945
+                    dataCadastro: 24/07/2023 às 16:58:49 UTC
                     sexo: F
                     telefone: (85)98981-2256
                     email: heloisa_costa@ciaimoveissjc.com
@@ -914,7 +914,7 @@ paths:
                     uf: CE
                     cidade: Caucaia
                     rua: Rua Sargento Feitosa
-                    numero_rua: 981
+                    numeroRua: 981
                     enabled: true
                     password: $2a$10$HhxGI2Ic8SkNNRU3vsq9m.3kJjzxRtik.uePu3WSjm3PxZeyS5VFC
                     authorities:
@@ -1010,14 +1010,14 @@ paths:
                 content:
                   - id: b47861f2-5ae0-4771-9d52-8d45bfec6acb
                     nome: Bermuda A
-                    quantidade_estoque: 410
+                    quantidadeEstoque: 410
                     preco: 900
                     links:
                       - rel: self
                         href: http://localhost:8080/produtos/id/b47861f2-5ae0-4771-9d52-8d45bfec6acb
                   - id: 6bb93022-563a-4e01-ac6f-9752559447b7
                     nome: Bermuda B
-                    quantidade_estoque: 84
+                    quantidadeEstoque: 84
                     preco: 6.44
                     links:
                       - rel: self
@@ -1067,7 +1067,7 @@ paths:
               example:
                 id: f9c473bf-afb8-4eb2-9d32-d1c2b9498408
                 nome: Blusa B
-                quantidade_estoque: 500
+                quantidadeEstoque: 500
                 preco: 10
                 _links:
                   Lista de Produtos:
@@ -1125,7 +1125,7 @@ paths:
             '*/*':
               example: Item Tênis B removido.
         '400':
-          description: Id inválida
+          description: Id inválida.
         '401':
           description: Não autorizado
         '403':
@@ -1140,11 +1140,11 @@ components:
       required:
         - cep
         - cpf
-        - data_nasc
+        - dataNasc
         - email
         - login
         - nome
-        - numero_rua
+        - numeroRua
         - senha
         - sexo
         - telefone
@@ -1167,7 +1167,7 @@ components:
           type: string
         cpf:
           type: string
-        data_nasc:
+        dataNasc:
           pattern: ^\d{2}/\d{2}/\d{4}$
           type: string
         sexo:
@@ -1183,14 +1183,14 @@ components:
         cep:
           pattern: \d{5}-\d{3}
           type: string
-        numero_rua:
+        numeroRua:
           pattern: ^[1-9]\d{0,4}$
           type: string
     ProdutoDTO:
       required:
         - nome
         - preco
-        - quantidade_estoque
+        - quantidadeEstoque
       type: object
       properties:
         nome:
@@ -1198,7 +1198,7 @@ components:
           minLength: 0
           pattern: '[\w\u00C0-\u00FF\/\\#,.()\-'']+(\s([\w\u00C0-\u00FF\/\\#(),.\-''])+)*'
           type: string
-        quantidade_estoque:
+        quantidadeEstoque:
           pattern: ^\d{1,6}$
           type: string
         preco:
